# ferryte

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT.txt  LICENSING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
benchmark/: .env.example  README.md  __init__.py  _agentcore_after.json  _agentcore_full.json  _agentcore_full_after.json  _agentcore_probe.json  adapter.py  agentcore.py  aws_agentcore_setup.md  backend_smoke.py  backends.py  docker-compose.yml  mem0_backend.py  mem0_scalp.py  memory.py  requirements.txt  results.json  results_mem0_baseline.json  results_mem0_ferryte.json  results_with_ferryte.json  run.py  setup_agentcore.py  smoke.py  stores.py  zep_backend.py
brand/: README.md
dashboard/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/public/: sample-audit.html
dashboard/src/: sample-report.json
dashboard/src/app/: fonts.ts  globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
dashboard/src/components/: Brand.tsx  CopyableCommand.tsx  EvidenceOrbit.tsx  FooterWhy.tsx  InstallTerminal.tsx  MarketingNav.tsx  MemoryBloom.tsx  Pill.tsx  ScenarioRow.tsx  Stat.tsx  Surface.tsx  Terminal.tsx  WaitlistForm.tsx
dashboard/src/data/: benchmark.ts
dashboard/src/lib/: report.ts
demo/: README.md  multi_tenant_leak.py
examples/: why_demo.py
launch/: design_partners.md  ferryte_the_business_book_expanded.md  ferryte_the_complete_guide.md  ferryte_the_complete_guide_expanded.md  forgetting_report.md  hn_post.md  one_pager.md  producthunt.md  screencast_script.md  the_forgetting_report.md  x_thread.md
launch/ferryte_pdf_build/: ferryte_the_complete_guide_readable.html  package-lock.json  package.json  render.js
src/ferryte/: __init__.py  cli.py  config.py  context.py  instrument.py  registry.py
src/ferryte/adapters/: __init__.py  base.py  cloudflare.py  letta.py  mem0.py  vector.py  zep.py
src/ferryte/api/: __init__.py  server.py
src/ferryte/lineage/: __init__.py  blast.py  (+2 more)
tests/: conftest.py  test_action_lineage.py  test_answer_lineage.py  test_attribute.py  test_cli_audit.py  test_coverage_report.py  test_detect.py  test_fingerprint_lineage.py  test_instrument_cloudflare.py  test_instrument_letta.py  test_instrument_vector.py  test_instrument_zep.py  test_lineage.py  test_oracle_scenarios.py  test_replay.py
(+38 files in other folders)
